--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Dec  4 17:05:02 2018</p>
+         Last Run: Tue Dec  4 18:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>-14</td>
                         <td>-19</td>
                         <td>7</td>
-                        <td>86</td>
+                        <td>85</td>
                         <td>0</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>9</td>
+                        <td>10</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -46,11 +46,11 @@
                         <td>-15</td>
                         <td>-20</td>
                         <td>7</td>
-                        <td>86</td>
+                        <td>85</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>9</td>
+                        <td>8</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -62,7 +62,7 @@
                         <td>0</td>
                         <td>6</td>
                         <td>SSW</td>
-                        <td>10</td>
+                        <td>6</td>
                      </tr>
                   </tbody>
                </table>
@@ -171,8 +171,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "86",
-                 "86",
+                 "85",
+                 "85",
                  "88"
                ]
              },
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "9",
-                 "9",
-                 "10"
+                 "10",
+                 "8",
+                 "6"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Dec  4 17:05:02 2018</p>
+         Last Run: Tue Dec  4 18:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 17 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 08, 2018 - 10:35AM til 11:35AM</H4>
                <table class="table table-striped">
@@ -246,33 +246,33 @@
                      <tr>
                         <td>10:00 AM</td>
                         <td>Partly Cloudy</td>
-                        <td>-7</td>
-                        <td>-12</td>
+                        <td>-6</td>
+                        <td>-10</td>
                         <td>0</td>
                         <td>61</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>46</td>
+                        <td>53</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Partly Cloudy</td>
-                        <td>-5</td>
-                        <td>-9</td>
+                        <td>-4</td>
+                        <td>-8</td>
                         <td>0</td>
                         <td>58</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>47</td>
+                        <td>53</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-3</td>
-                        <td>-7</td>
-                        <td>1</td>
+                        <td>-2</td>
+                        <td>-6</td>
+                        <td>0</td>
                         <td>56</td>
                         <td>0</td>
                         <td>11</td>
@@ -304,9 +304,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-12",
-                 "-9",
-                 "-7"
+                 "-10",
+                 "-8",
+                 "-6"
                ]
              },
              {
@@ -316,9 +316,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-7",
-                 "-5",
-                 "-3"
+                 "-6",
+                 "-4",
+                 "-2"
                ]
              }
            ]
@@ -377,7 +377,7 @@
                "data":[
                  "0",
                  "0",
-                 "1"
+                 "0"
                ]
              },
              {
@@ -397,8 +397,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "46",
-                 "47",
+                 "53",
+                 "53",
                  "56"
                ]
              }
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Dec  4 17:05:02 2018</p>
+         Last Run: Tue Dec  4 18:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 09, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -464,11 +464,11 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>2</td>
-                        <td>72</td>
+                        <td>70</td>
                         <td>1</td>
                         <td>11</td>
                         <td>SW</td>
-                        <td>22</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -476,23 +476,23 @@
                         <td>0</td>
                         <td>-4</td>
                         <td>2</td>
-                        <td>66</td>
+                        <td>64</td>
                         <td>1</td>
                         <td>11</td>
                         <td>SW</td>
-                        <td>32</td>
+                        <td>33</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>1</td>
-                        <td>-2</td>
+                        <td>-3</td>
                         <td>1</td>
-                        <td>61</td>
+                        <td>59</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>SW</td>
-                        <td>38</td>
+                        <td>39</td>
                      </tr>
                   </tbody>
                </table>
@@ -521,7 +521,7 @@
                "data":[
                  "-6",
                  "-4",
-                 "-2"
+                 "-3"
                ]
              },
              {
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "72",
-                 "66",
-                 "61"
+                 "70",
+                 "64",
+                 "59"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "22",
-                 "32",
-                 "38"
+                 "23",
+                 "33",
+                 "39"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Dec  4 17:05:02 2018</p>
+         Last Run: Tue Dec  4 18:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 10, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -675,39 +675,39 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>-2</td>
                         <td>-6</td>
                         <td>10</td>
-                        <td>74</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>59</td>
+                        <td>60</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>-2</td>
                         <td>-6</td>
                         <td>11</td>
-                        <td>75</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>59</td>
+                        <td>60</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>16</td>
+                        <td>12</td>
                         <td>76</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>58</td>
+                        <td>59</td>
                      </tr>
                   </tbody>
                </table>
@@ -807,7 +807,7 @@
                "data":[
                  "10",
                  "11",
-                 "16"
+                 "12"
                ]
              },
              {
@@ -816,8 +816,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "73",
                  "74",
-                 "75",
                  "76"
                ]
              },
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "59",
-                 "59",
-                 "58"
+                 "60",
+                 "60",
+                 "59"
                ]
              }
            ]
