--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Dec  4 20:05:02 2018</p>
+         Last Run: Tue Dec  4 21:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -38,15 +38,15 @@
                         <td>0</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>10</td>
+                        <td>7</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
-                        <td>-15</td>
-                        <td>-20</td>
+                        <td>-14</td>
+                        <td>-19</td>
                         <td>7</td>
-                        <td>85</td>
+                        <td>84</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
@@ -55,14 +55,14 @@
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
-                        <td>-16</td>
-                        <td>-21</td>
+                        <td>-15</td>
+                        <td>-20</td>
                         <td>7</td>
-                        <td>88</td>
+                        <td>86</td>
                         <td>0</td>
                         <td>6</td>
                         <td>SSW</td>
-                        <td>6</td>
+                        <td>8</td>
                      </tr>
                   </tbody>
                </table>
@@ -90,8 +90,8 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-19",
-                 "-20",
-                 "-21"
+                 "-19",
+                 "-20"
                ]
              },
              {
@@ -102,8 +102,8 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-14",
-                 "-15",
-                 "-16"
+                 "-14",
+                 "-15"
                ]
              }
            ]
@@ -172,8 +172,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "85",
-                 "85",
-                 "88"
+                 "84",
+                 "86"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "10",
                  "7",
-                 "6"
+                 "7",
+                 "8"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Dec  4 20:05:02 2018</p>
+         Last Run: Tue Dec  4 21:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 17 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 08, 2018 - 10:35AM til 11:35AM</H4>
                <table class="table table-striped">
@@ -249,7 +249,7 @@
                         <td>-6</td>
                         <td>-10</td>
                         <td>0</td>
-                        <td>61</td>
+                        <td>62</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
@@ -386,7 +386,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "61",
+                 "62",
                  "58",
                  "55"
                ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Dec  4 20:05:02 2018</p>
+         Last Run: Tue Dec  4 21:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 09, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -468,7 +468,7 @@
                         <td>1</td>
                         <td>11</td>
                         <td>SW</td>
-                        <td>23</td>
+                        <td>22</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -476,11 +476,11 @@
                         <td>0</td>
                         <td>-4</td>
                         <td>2</td>
-                        <td>64</td>
+                        <td>65</td>
                         <td>1</td>
                         <td>11</td>
                         <td>SW</td>
-                        <td>33</td>
+                        <td>32</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -492,7 +492,7 @@
                         <td>0</td>
                         <td>13</td>
                         <td>SW</td>
-                        <td>39</td>
+                        <td>38</td>
                      </tr>
                   </tbody>
                </table>
@@ -602,7 +602,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "70",
-                 "64",
+                 "65",
                  "59"
                ]
              },
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "23",
-                 "33",
-                 "39"
+                 "22",
+                 "32",
+                 "38"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Dec  4 20:05:02 2018</p>
+         Last Run: Tue Dec  4 21:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 10, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -675,7 +675,7 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>-2</td>
                         <td>-6</td>
                         <td>10</td>
@@ -683,11 +683,11 @@
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>60</td>
+                        <td>59</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>-2</td>
                         <td>-6</td>
                         <td>11</td>
@@ -695,7 +695,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>60</td>
+                        <td>59</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -707,7 +707,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>59</td>
+                        <td>58</td>
                      </tr>
                   </tbody>
                </table>
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "60",
-                 "60",
-                 "59"
+                 "59",
+                 "59",
+                 "58"
                ]
              }
            ]
